# shegzbit-audiobook

./: .gitignore  .replit  app.py  auth.py  database.py  extractor.py  main.py  models.py  novel_reader.db  pyproject.toml  replit.md  synthesizer.py  worker.py
.agents/memory/: MEMORY.md  starlette-template-response.md
.local/state/replit/agent/transcript/b3772534-0635-4d41-849a-f2d49b305e38/: transcript.jsonl
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/8Ohf5Q8faEbXwFWm5upNV/: start_application.shell.exec.0
.local/state/workflow-logs/Kd54AslE9dQaoJvCRtXpr/: start_application.shell.exec.0
.local/state/workflow-logs/drSuZnk0DZnFGX8agbgJD/: start_application.shell.exec.0
.local/state/workflow-logs/gyAiUabCNmXS73ckIczmA/: start_application.shell.exec.0
.local/state/workflow-logs/rReU1CLlnQBbg4LA5PstE/: start_application.shell.exec.0
.local/state/workflow-logs/sZ8FiYXFuxhjuncwA8ktc/: start_application.shell.exec.0
attached_assets/: Pasted--Build-prompt-Web-Novel-Audio-Reader-Paste-this-whole-d_1783331198138.txt  Pasted--usr-bin-env-python3-novel-reader-py-Fetch-a-web-novel-_1783329884303.txt
static/: app.js  style.css
templates/: base.html  index.html  library.html  login.html
