[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.15.0",
    "edge-tts>=7.2.8",
    "fastapi>=0.139.0",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "pydub>=0.25.1",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.50.1",
]
